tests/NormalTests/paczka1/fuzzy1/98309917.err
Error in line 6: Lf2H83bdu S654 490,35
Error in line 2: 6pXvfEwCx S57 14,7
Error in line 10: MZkvvUQkxw S57 98,0
Error in line 12: A1H S57 100,0
Error in line 17: Lf2H83bdu S654 256,3
Error in line 16: MZkvvUQkxw S654 96,2
Error in line 23: MZkvvUQkxw S57 52,8
Error in line 30: RVwLs A514 64,8
Error in line 38: Yz0mufFW S57 -1,4
Error in line 37: Lf2H83bdu A514 87,3
